fix: [PD-877] cart page - msite cross mark is broken and overlap issue

--- a/src/component/CartPageItem/CartPageItem.style.scss
+++ b/src/component/CartPageItem/CartPageItem.style.scss
@@ -298,6 +298,7 @@
     text-align: justify;
     div {
       display: flex;
+      flex-wrap: wrap;
     }
   }
 
